--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,32 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnDetailedScreen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Move to detailed screen"
-        android:layout_gravity="center" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardItem"
+        android:layout_width="200dp"
+        android:layout_height="200dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imgItem"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_gravity="center"/>
+
+            <TextView
+                android:id="@+id/txtItemTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:text="Nike Air Force 1 '07 White / White - White"
+                android:textSize="15sp"
+                android:layout_gravity="center">
+            </TextView>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
