--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,17 @@
         android:textSize="25sp"
         android:textStyle="bold" />
 
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:gravity="center"/>
+
+
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardItem"
         android:layout_width="200dp"
