update layout of MainActivity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,9 @@
         <item name="contentInsetStart">0dp</item>
         <item name="contentInsetLeft">0dp</item>
     </style>
+
+    <style name="CustomFloatingButton" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="backgroundTint">@android:color/white</item>
+        <item name="tint">@android:color/black</item>
+    </style>
 </resources>
