--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,40 +10,32 @@
     <include
         layout="@layout/toolbar_layout"/>
 
-    <GridView
-        android:id="@+id/gridView"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="2"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardItem"
-        android:layout_width="200dp"
-        android:layout_height="200dp" >
-
-        <LinearLayout
+        <GridView
+            android:id="@+id/gridView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:numColumns="2"
+            android:verticalSpacing="5dp"
+            android:horizontalSpacing="5dp"
+            android:padding="5dp"
+            android:gravity="center"
+            android:stretchMode="columnWidth"
+            android:background="@color/white"/>
 
-            <ImageView
-                android:id="@+id/imgItem"
-                android:layout_width="180dp"
-                android:layout_height="180dp"
-                android:layout_gravity="center"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            style="@style/CustomFloatingButton"
+            android:contentDescription="Filter"
+            android:layout_margin="16dp"
+            android:src="@drawable/filter" />
 
-            <TextView
-                android:id="@+id/txtItemTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:textSize="15sp"
-                android:layout_gravity="center">
-            </TextView>
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </LinearLayout>
