fixed build error

--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -13,7 +13,7 @@
         android:id="@+id/product_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/shoe_image"
+        android:src="@drawable/filter"
         android:contentDescription="Shoe image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
