--- a/app/src/main/res/layout/activity_detailed_info.xml
+++ b/app/src/main/res/layout/activity_detailed_info.xml
@@ -108,30 +108,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Reviews"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/reviewListContainer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/reviewMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:text="No reviews yet."
+                    android:visibility="gone"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="20sp"/>
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/textView6"
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+                    android:layout_height="2dp"
+                    android:background="@android:color/darker_gray"/>
             </LinearLayout>
 
             <Button
@@ -141,7 +139,6 @@
                 android:layout_marginLeft="50dp"
                 android:backgroundTint="@color/black"
                 android:text="Write a review" />
-
         </LinearLayout>
     </ScrollView>
 
