--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -8,17 +8,10 @@
     tools:context=".view.ReviewActivity"
     android:padding="16dp">
 
-    <!-- Product Image -->
-    <ImageView
-        android:id="@+id/product_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/filter"
-        android:contentDescription="Shoe image"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+    <include
+        android:id="@+id/actionbar"
+        layout="@layout/toolbar_layout"/>
+
 
     <!-- Product Name -->
     <TextView
@@ -28,7 +21,7 @@
         android:text="Nike Air Force 1"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/product_image"
+        app:layout_constraintTop_toBottomOf="@id/actionbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"/>
