--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ReviewActivity"
-    android:padding="16dp">
+    tools:context=".view.ReviewActivity">
 
     <include
         android:id="@+id/actionbar"
